// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sampleReducer resetSampleValue should reset to state.sample.count to 0 1`] = `
Object {
  "sampleValue": 0,
}
`;

exports[`sampleReducer updateSampleValue should add 1 to state.sample.count 1`] = `
Object {
  "sampleValue": 1,
}
`;
